<resources>
    <string name="app_name">Velo</string>

    <string name="titleHome">Liste des villes</string>

    <!-- About dev -->
    <string name="about">A propos</string>
    <string name="name">Alexis Cabrol</string>
    <string name="source">Data provided by JCDecaux.</string>
    <string name="mail">alexiscabrololivaux@gmail.com</string>
    <string name="github">https://github.com/AlexisCabrol</string>
    <string name="linkedin">https://www.linkedin.com/in/alexiscabrol/</string>

    <!-- City details activity -->
    <string name="titleMap">Carte</string>
    <string name="titleStationList">Liste des stations</string>
    <string name="errorLoadCityList">Une erreur est survenue lors du chargement.</string>

    <!-- Station List -->
    <string name="bikeAvailable">Vélo disponibles : %1$s</string>
    <string name="standsAvailable">Place disponibles : %1$s</string>
    <string name="info">Vélo disponibles : %1$s - Place disponibles : %2$s</string>
    <string name="refreshsuccess">Vous avez bien mis à jour votre liste de station.</string>
    <string name="refreshfailed">Une erreur est survenue, veuillez réessayer.</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="errorLoadStationList">Une erreur est survenue lors du chargement.</string>
    <string name="noStation">Aucunes stations trouvées.</string>

</resources>
